--- a/JobPortal-Training/JobPortal/Views/Search/SearchIndex.cshtml
+++ b/JobPortal-Training/JobPortal/Views/Search/SearchIndex.cshtml
@@ -19,7 +19,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">@job.Name</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">@job.Category - @job.SubCategory</h6>
-                                <p class="card-text">Salary: @job.Salary</p>
+                                <p class="card-text">Salary: @job.Salary/-</p>
                                 <p class="card-text">Deadline: @job.DeadLine.ToShortDateString()</p>
                             </div>
                         </div>
