--- a/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
+++ b/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
@@ -1,50 +1,76 @@
 ﻿@{
-	ViewData["Title"] = "Add Job";
+    ViewData["Title"] = "Add Job";
 }
 
 <div id="message">
-	@if (TempData["message"] != null && TempData["message"].ToString().Length > 0)
-	{
-		<div class="alert @TempData["messageType"]">
-			@TempData["message"]
-			<button class="btn-close" onclick="document.getElementById('message').innerHTML=''"></button>
-		</div>
-	}
+    @if (TempData["message"] != null && TempData["message"].ToString().Length > 0)
+    {
+        <div class="alert @TempData["messageType"]">
+            @TempData["message"]
+            <button class="btn-close" onclick="document.getElementById('message').innerHTML=''"></button>
+        </div>
+    }
 </div>
 <br />
 <form method="post" action="AddJob2">
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label">Name</label>
-		<div class="col-sm-4">
-			<input class="form-control" name="name" required />
-		</div>
-	</div>
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label">Category</label>
-		<div class="col-sm-4">
-			<input class="form-control" name="category" required />
-		</div>
-	</div>
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label">Sub-Category</label>
-		<div class="col-sm-4">
-			<input class="form-control" name="subcategory" required />
-		</div>
-	</div>
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label">Salary</label>
-		<div class="col-sm-4">
-			<input type="number" class="form-control" name="salary" required />
-		</div>
-	</div>
-	<div class="row mb-3">
-		<label class="col-sm-2 col-form-label">Deadline</label>
-		<div class="col-sm-4">
-			<input type="date" class="form-control" name="deadline" required />
-		</div>
-	</div>
-	<div>
-		<button type="submit" class="btn btn-primary">Submit</button>
-		<button type="reset" class="btn btn-primary">Cancel</button>
-	</div>
+    <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-4">
+            <input class="form-control" name="name" required />
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Category</label>
+        <div class="col-sm-4">
+            <select class="form-control" name="category" id="category" required>
+                <option value="" selected disabled>Select Category</option>
+                <option value="IT">IT</option>
+                <option value="Outreach">Outreach</option>
+            </select>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Sub-Category</label>
+        <div class="col-sm-4">
+            <select class="form-control" name="subcategory" id="subcategory" required>
+                <option value="" selected disabled>Select Sub-Category</option>
+            </select>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Salary</label>
+        <div class="col-sm-4">
+            <input type="number" class="form-control" name="salary" required />
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Deadline</label>
+        <div class="col-sm-4">
+            <input type="date" class="form-control" name="deadline" required />
+        </div>
+    </div>
+    <div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="reset" class="btn btn-primary">Cancel</button>
+    </div>
 </form>
+
+<script>
+    var categoryObject = {
+        "IT": ["Dev", "Testing", "UI/UX"],
+        "Outreach": ["Promotion", "Graphic Design"]
+    };
+
+    var categorySel = document.getElementById("category");
+    var subcategorySel = document.getElementById("subcategory");
+
+    categorySel.onchange = function () {
+        // empty sub-category dropdown
+        subcategorySel.length = 1;
+        // display correct values
+        var z = categoryObject[this.value];
+        for (var i = 0; i < z.length; i++) {
+            subcategorySel.options[subcategorySel.options.length] = new Option(z[i], z[i]);
+        }
+    }
+</script>
