--- a/AppointmentScheduler/AppointmentScheduler/Views/Shared/_AddEditAppointment.cshtml
+++ b/AppointmentScheduler/AppointmentScheduler/Views/Shared/_AddEditAppointment.cshtml
@@ -3,7 +3,16 @@
         <div class="modal-content">
             <form id="appointmentForm" autocomplete="off" novalidate="novalidate">
                 <div class="modal-header">
-                    <h4 class="modal-title">Add/Edit Appointment</h4>
+                    @if (User.IsInRole(AppointmentScheduler.Utility.Helper.Admin))
+                    {
+                        <h4 class="modal-title">Add/Edit Appointment</h4>
+
+                    }
+                    else
+                    {
+                        <h4 class="modal-title">Appointment Details</h4>
+
+                    }
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
@@ -18,10 +27,38 @@
                         <label for="appointmentDate">Appointment Date</label>
                         <input type="text" class="form-control" id="appointmentDate" />
                     </div>
-                    <div class="form-group">
-                        <label for="title">Select Associate</label>
-                        <select id="associateId" asp-items="@(new SelectList(ViewBag.AssociateList,"Id","Name"))" class="form-control"></select>
-                    </div>
+                    @if (User.IsInRole(AppointmentScheduler.Utility.Helper.Admin))
+                    {
+                        <div class="form-group">
+                            <label for="title">Select Associate</label>
+                            <select id="associateId" asp-items="@(new SelectList(ViewBag.AssociateList, "Id", "Name"))" class="form-control"></select>
+                        </div>
+                    }
+                    else
+                    {
+                        @if (User.IsInRole(AppointmentScheduler.Utility.Helper.Manager))
+                        {
+                            <div class="form-group">
+                                <label for="lblAssociateName">Associate Name</label>
+                                <label class="form-control" disabled id="lblAssociateName" />
+                            </div>
+                            <div class="form-group">
+                                <label for="lblStatus">Status</label>
+                                <label class="form-control" disabled id="lblStatus" />
+                            </div>
+                        }
+                        @if (User.IsInRole(AppointmentScheduler.Utility.Helper.Associate))
+                        {
+                            <div class="form-group">
+                                <label for="lblManagerName">Manager Name</label>
+                                <label class="form-control" disabled id="lblManagerName" />
+                            </div>
+                            <div class="form-group">
+                                <label for="lblStatus">Status</label>
+                                <label class="form-control" disabled id="lblStatus" />
+                            </div>
+                        }
+                    }
                     <div class="form-group">
                         <label for="title">Select Duration</label>
                         <select id="duration" asp-items="ViewBag.Duration" class="form-control"></select>
@@ -30,7 +67,17 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" onclick="onCloseModal();">Close</button>
-                    <button type="button" id="btnSubmit" class="btn btn-success" onclick="onSubmitForm();">Submit</button>
+
+                    @if (User.IsInRole(AppointmentScheduler.Utility.Helper.Admin))
+                    {
+                        <button type="button" id="btnSubmit" class="btn btn-success" onclick="onSubmitForm();">Submit</button>
+                        <button type="button" id="btnDelete" class="btn btn-danger hidden" onclick="onDeleteAppointment();">Delete</button>
+                    } 
+                    @if (User.IsInRole(AppointmentScheduler.Utility.Helper.Manager))
+                    {
+                        <button type="button" id="btnConfirm" class="btn btn-success" onclick="onConfirm();">Confirm</button>
+                        <button type="button" id="btnDelete" class="btn btn-danger hidden" onclick="onDeleteAppointment();">Delete</button>
+                    }
                 </div>
             </form>
         </div>
