--- a/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
+++ b/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
@@ -19,13 +19,25 @@
             <input class="form-control" name="name" required />
         </div>
     </div>
+    
+    <div class="row mb-3">
+        <label class="col-sm-2 col-form-label">Company Name</label>
+        <div class="col-sm-4">
+            <input class="form-control" name="CompanyName" required />
+        </div>
+    </div>
+
     <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Category</label>
         <div class="col-sm-4">
             <select class="form-control" name="category" id="category" required>
                 <option value="" selected disabled>Select Category</option>
-                <option value="IT">IT</option>
-                <option value="Outreach">Outreach</option>
+                <option value="Information Technology">Information Technology</option>
+                <option value="Sales">Sales</option>
+                <option value="Marketing">Marketing</option>
+                <option value="Human Resources">Human Resources</option>
+                <option value="Operations">Operations</option>
+
             </select>
         </div>
     </div>
@@ -57,8 +69,11 @@
 
 <script>
     var categoryObject = {
-        "IT": ["Dev", "Testing", "UI/UX"],
-        "Outreach": ["Promotion", "Graphic Design"]
+        "Information Technology": ["Web Development", "Mobile Development", "Software Testing"],
+        "Sales": ["Business Development", "Customer Support"],
+        "Marketing": ["Advertising", "Public Relations"],
+        "Human Resources": ["Employee Recruitment", "Employee Training"],
+        "Operations": ["Supply Chain Management", "Logistics", "Quality Control"]
     };
 
     var categorySel = document.getElementById("category");
