Changes in view

--- a/Text-Editor-App/Text-Editor-App/Views/Home/Edit.cshtml
+++ b/Text-Editor-App/Text-Editor-App/Views/Home/Edit.cshtml
@@ -4,7 +4,7 @@
     <input type="text" name="Author" value="@Model.Author" />
     <textarea name="DocumentText">@Model.DocumentText</textarea>
     <br />
-    <input type="submit" value="Save Changes" />
+    <input type="submit" value="Save Changes" class="btn btn-success"/>
 </form>
 <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 <script type="text/javascript">
