--- a/Text-Editor-App/Text-Editor-App/Views/Home/ViewNotes.cshtml
+++ b/Text-Editor-App/Text-Editor-App/Views/Home/ViewNotes.cshtml
@@ -3,15 +3,13 @@
 <br />
 @foreach (var note in ViewBag.DocList)
 {
-
-    <div class="card mb-3 shadow-lg">
-        <div class="card-body">
-            <h5 class="card-title">@note.Id @note.Author</h5>
-            <p class="card-text">@Html.Raw(note.DocumentText)</p>
-            <a href="/Home/Edit?Id=@note.Id" class="btn btn-success">Edit</a>
-            <a href="/Home/Delete?Id=@note.Id" class="btn btn-danger">Delete</a>
+        <div class="card mb-3 bg-light border">
+            <div class="card-body">
+                <h5 class="card-title">#@note.Id @note.Author</h5>
+                <p class="card-text">@Html.Raw(note.DocumentText)</p>
+                    <a href="/Home/Edit?Id=@note.Id" class="card-text btn btn-success">Edit</a>
+                    <a href="/Home/Delete?Id=@note.Id" class="card-text btn btn-danger">Delete</a>
         </div>
-    </div>
-
-   
+        </div>
 }
+
