--- a/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
+++ b/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
@@ -12,7 +12,7 @@
     }
 </div>
 <br />
-<form method="post" action="AddJob2">
+<form method="post" action="AddJob">
     <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-4">
