--- a/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
+++ b/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
@@ -32,12 +32,6 @@
         <div class="col-sm-4">
             <select class="form-control" name="category" id="category" required>
                 <option value="" selected disabled>Select Category</option>
-                <option value="Information Technology">Information Technology</option>
-                <option value="Sales">Sales</option>
-                <option value="Marketing">Marketing</option>
-                <option value="Human Resources">Human Resources</option>
-                <option value="Operations">Operations</option>
-
             </select>
         </div>
     </div>
@@ -68,16 +62,17 @@
 </form>
 
 <script>
-    var categoryObject = {
-        "Information Technology": ["Web Development", "Mobile Development", "Software Testing"],
-        "Sales": ["Business Development", "Customer Support"],
-        "Marketing": ["Advertising", "Public Relations"],
-        "Human Resources": ["Employee Recruitment", "Employee Training"],
-        "Operations": ["Supply Chain Management", "Logistics", "Quality Control"]
-    };
+    var categoryObject = @Html.Raw(Json.Serialize(ViewBag.categories));
 
     var categorySel = document.getElementById("category");
     var subcategorySel = document.getElementById("subcategory");
+
+    var categories = Object.keys(categoryObject);
+
+    // populate cateogories
+    for (var i = 0; i < categories.length; i++) {
+        categorySel.options[i + 1] = new Option(categories[i], categories[i]);
+    }
 
     categorySel.onchange = function () {
         // empty sub-category dropdown
