--- a/JobPortal-Training/JobPortal/Views/Admin/Admin.cshtml
+++ b/JobPortal-Training/JobPortal/Views/Admin/Admin.cshtml
@@ -36,31 +36,26 @@
 		</tr>
 	</thead>
 	<tbody>
+		@{
+			JobModel? editJob = null;
+		}
 		@foreach (var job in (List<JobModel>)ViewData["jobs"])
 		{
 			@if (ViewData["editID"] != null && (int)ViewData["editID"]! == job.Id)
-{
-			<form method="post" action="Edit">
-			<tr>
+			{
+				editJob = job;
+				<form method="post" action="Edit">
+				<tr>
 					<td><input type="hidden" name="id" value="@job.Id" />@job.Id</td>
 					<td><input name="name" value="@job.Name"></td>
 					<td>
 						<select class="form-control" name="category" id="category" required>
-							<option value="@job.Category" selected disabled>@job.Category</option>
-							<option value="Information Technology">Information Technology</option>
-							<option value="Sales">Sales</option>
-							<option value="Marketing">Marketing</option>
-							<option value="Human Resources">Human Resources</option>
-							<option value="Operations">Operations</option>
-
-
 						</select>
 					</td>
 					<td>
-                        <select class="form-control" name="subcategory" id="subcategory" required>
-							<option value="@job.SubCategory" selected disabled>@job.SubCategory</option>
-                        </select>
-                    </td>
+						<select class="form-control" name="subcategory" id="subcategory" required>
+						</select>
+					</td>
 					<td><input name="salary" value="@job.Salary"></td>
 					<td><input type="date" name="deadline" value="@job.DeadLine.ToString("yyyy-MM-dd")"></td>
 					<td><input name="CompanyName" value="@job.CompanyName"></td>
@@ -69,30 +64,6 @@
 					<td><a class="btn btn-danger" href="Admin">Cancel</a></td>
 				</tr>
 				</form>
-
-
-				<script>
-					var categoryObject = {
-						"Information Technology": ["Web Development", "Mobile Development", "Software Testing"],
-						"Sales": ["Business Development", "Customer Support"],
-						"Marketing": ["Advertising", "Public Relations"],
-						"Human Resources": ["Employee Recruitment", "Employee Training"],
-						"Operations": ["Supply Chain Management", "Logistics", "Quality Control"]
-					}
-
-					var categorySel = document.getElementById("category");
-					var subcategorySel = document.getElementById("subcategory");
-
-					categorySel.onchange = function () {
-						// empty sub-category dropdown
-						subcategorySel.length = 1;
-						// display correct values
-						var z = categoryObject[this.value];
-						for (var i = 0; i < z.length; i++) {
-							subcategorySel.options[subcategorySel.options.length] = new Option(z[i], z[i]);
-						}
-					}
-				</script>
 			}
 
 			else
@@ -113,3 +84,33 @@
 		}
 	</tbody>
 </table>
+@if (editJob != null)
+{
+	<script>
+		var categoryObject = @Html.Raw(Json.Serialize(ViewBag.categories));
+
+		var categorySel = document.getElementById("category");
+		var subcategorySel = document.getElementById("subcategory");
+
+		var categories = Object.keys(categoryObject);
+
+		// populate cateogories
+		for (var i = 0; i < categories.length; i++) {
+			categorySel.options[i + 1] = new Option(categories[i], categories[i]);
+		}
+
+		categorySel.onchange = function () {
+			// empty sub-category dropdown
+			subcategorySel.length = 1;
+			// display correct values
+			var z = categoryObject[this.value];
+			for (var i = 0; i < z.length; i++) {
+				subcategorySel.options[subcategorySel.options.length] = new Option(z[i], z[i]);
+			}
+		}
+
+		categorySel.value = "@editJob.Category";
+		categorySel.onchange(); // call forcibly, otherwise the values aren't loaded
+		subcategorySel.value = "@editJob.SubCategory";
+	</script>
+}
