--- a/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
+++ b/JobPortal-Training/JobPortal/Views/Admin/AddJob.cshtml
@@ -69,5 +69,5 @@
 	var categorySel = document.getElementById("category");
 	var subcategorySel = document.getElementById("subcategory");
 
-	initCategories(categorySel, subcategorySel);
+	initCategories(categoryObject, categorySel, subcategorySel);
 </script>
