Role Manager work started

--- a/AuthenticationTutorial/AuthenticationTutorial/Views/Students/Details.cshtml
+++ b/AuthenticationTutorial/AuthenticationTutorial/Views/Students/Details.cshtml
@@ -1,13 +1,14 @@
-﻿@model AuthenticationTutorial.Models.StudentModel
+﻿@model AuthenticationTutorial.Models.Student
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>StudentModel</h4>
+    <h4>Student</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
