--- a/AuthenticationTutorial/AuthenticationTutorial/Views/Students/Index.cshtml
+++ b/AuthenticationTutorial/AuthenticationTutorial/Views/Students/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<AuthenticationTutorial.Models.StudentModel>
+﻿@model IEnumerable<AuthenticationTutorial.Models.Student>
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
