--- a/AuthWithRolesTest/AuthWithRolesTest/Views/NotesModels/Edit.cshtml
+++ b/AuthWithRolesTest/AuthWithRolesTest/Views/NotesModels/Edit.cshtml
@@ -24,9 +24,8 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <input type="hidden" asp-for="UserId" />
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
