--- a/OnlineMusicProject/OnlineMusicProject/Views/Songs/Create.cshtml
+++ b/OnlineMusicProject/OnlineMusicProject/Views/Songs/Create.cshtml
@@ -29,7 +29,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
+                <select class="form-control" id="genre" name="genre" asp-for="Genre">
+                    <option value="Romance">Romance</option>
+                    <option value="Sad">Sad</option>
+                    <option value="Happy">Happy</option>
+                    <option value="Upbeat">Upbeat</option>
+                    <option value="Relaxing">Relaxing</option>
+                </select>
+
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
