--- a/OnlineMusicProject/OnlineMusicProject/Views/Songs/Edit.cshtml
+++ b/OnlineMusicProject/OnlineMusicProject/Views/Songs/Edit.cshtml
@@ -30,7 +30,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
+               
+                    @Html.DropDownList("Genre", (IEnumerable<SelectListItem>)ViewBag.Genres, "Select... ", new{@class="form-control"})
+
+ 
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
