--- a/OnlineMusicProject/OnlineMusicProject/Views/Songs/Index.cshtml
+++ b/OnlineMusicProject/OnlineMusicProject/Views/Songs/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        @Html.DropDownList("Genre", (IEnumerable<SelectListItem>)ViewBag.Genres, "Select genre", new {@class="form-control"})
+        @Html.DropDownList("Genre", (IEnumerable<SelectListItem>)ViewBag.Genres, "All genre", new {@class="form-control"})
     </div>
     <div class="col-md-8">
         <input type="text" class="form-control" id="search" name="search" placeholder="Search by letter...">
