--- a/OnlineMusicProject/OnlineMusicProject/Views/Shared/_Layout.cshtml
+++ b/OnlineMusicProject/OnlineMusicProject/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-black border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">OnlineMusicProject</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Musically 🎶</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Songs" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Songs" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Genres" asp-action="Index">Genre</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Genres" asp-action="Index">Genre</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
