--- a/OnlineMusicProject/OnlineMusicProject/wwwroot/css/site.css
+++ b/OnlineMusicProject/OnlineMusicProject/wwwroot/css/site.css
@@ -60,13 +60,14 @@ a {
     color: black!important;
 }
 
-    .card a {
-        color: black !important;
-    }
+.card a {
+    color: black !important;
+}
 
 .btn:hover {
     background-color: #1DB954c2;
 }
+
 
 .dropdown-menu-dark {
     background-color: #343a40;
@@ -76,6 +77,13 @@ a {
     color: #fff;
 }
 
+
+ 
+ .btn-danger{
+    background-color:darkred;
+    color: #fff !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
-    font-weight:bold;
+    font-weight: bold;
 }
